sfdx-source/force-app/main/default/objects/Product_Insights__c/Product_Insights__c.object-meta.xml
<CustomObject>
    <description>LEM-623: Product Insights object that helps track insights against Opportunity, Account or Initiative to capture Merchant Insights for an active DoorDash product</description>
    <label>Product Insights</label>
    <nameField>
        <displayFormat>PDI-{0}</displayFormat>
        <label>Product Insight Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Insights</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>