sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-623: Lookup on Account for the current Insight obtained on the Product</description>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A product insight cannot be associated to a Store Account. Please choose a Business Account and try again.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Insights</relationshipLabel>
    <relationshipName>Product_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>