sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15222: It is used to store the Associated Account Plan.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Product Insights</relationshipLabel>
    <relationshipName>Product_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>