sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Actual_Incremental_Sales__c.field-meta.xml
<CustomField>
    <fullName>Actual_Incremental_Sales__c</fullName>
    <inlineHelpText>Displays the user’s perspective on the sales uplift $ of implementing the VSP Recommendation.</inlineHelpText>
    <label>User Provided Sales Uplift $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>