sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Adjusted_Incr_Sales_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Incr_Sales_Uplift__c</fullName>
    <formula>( Predicted_Sales_Uplift__c /(((IF(
MONTH(Today()) &lt; 4,
(ADDMONTHS(DATE( YEAR(Today()), 01, 01),3)-1),
IF(
MONTH(Today()) &lt; 7,
(ADDMONTHS(DATE( YEAR(Today()), 04, 01),3)-1),
IF(
MONTH(Today()) &lt; 10,
(ADDMONTHS(DATE( YEAR(Today()), 07, 01),3)-1),
(ADDMONTHS(DATE( YEAR(Today()), 10, 01),3)-1)
))))) - IF(
MONTH(Today()) &lt; 4,
DATE( YEAR(Today()), 01, 01),
IF(
MONTH(Today()) &lt; 7,
DATE( YEAR(Today()), 04, 01),
IF(
MONTH(Today()) &lt; 10,
DATE( YEAR(Today()), 07, 01),
DATE( YEAR(Today()), 10, 01)
)))+1))*(IF(
MONTH(Today()) &lt; 4,
(ADDMONTHS(DATE( YEAR(Today()), 01, 01),3)),
IF(
MONTH(Today()) &lt; 7,
(ADDMONTHS(DATE( YEAR(Today()), 04, 01),3)),
IF(
MONTH(Today()) &lt; 10,
(ADDMONTHS(DATE( YEAR(Today()), 07, 01),3)),
(ADDMONTHS(DATE( YEAR(Today()), 10, 01),3))
)))-Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Incr. Sales Uplift $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>