sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-623: Lookup on Initiative Object to create Insights against an Initiative taken by DoorDash with an Mx Business Account</description>
    <label>Mx touchpoint</label>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>Product Insights</relationshipLabel>
    <relationshipName>Product_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>