sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Interest_Level__c</fullName>
    <description>LEM-623: Captures the level of Interest for a Merchant with whom Product discussions were initiated.</description>
    <inlineHelpText>Indicates the overall Merchant interest level for the campaign product.</inlineHelpText>
    <label>Interest Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested at All</fullName>
            </value>
            <value>
                <fullName>Somewhat Uninterested</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Interested</fullName>
            </value>
            <value>
                <fullName>Very Interested</fullName>
            </value>
            <value>
                <fullName>To Be Evaluated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>