sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Lever__c.field-meta.xml
<CustomField>
    <fullName>Lever__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15224: It represents the Lever linked to the Product Insight record.</description>
    <label>Lever</label>
    <referenceTo>Lever__c</referenceTo>
    <relationshipLabel>Product Insights</relationshipLabel>
    <relationshipName>Product_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>