sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-623: Lookup to Opportunity to create an Insight against an Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Insights</relationshipLabel>
    <relationshipName>Product_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>