sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>LEM-623: Field to capture the origin of the Product discussion with a potential Mx.</description>
    <inlineHelpText>Indicates which party initiated the discussion of the campaign product.</inlineHelpText>
    <label>Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mx Initiated</fullName>
            </value>
            <value>
                <fullName>Pitched By DoorDash</fullName>
            </value>
            <value>
                <fullName>VSP Recommendation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>