sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>LEM-623: Capture if the Merchant is interested in purchasing the Product under discussion.</description>
    <inlineHelpText>Indicates the Merchant’s interest following the campaign product discussion.</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>