sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Outcome_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Reason__c</fullName>
    <description>LEM-623: Captures the reason for the Outcome of a discussion with a potential Merchant.</description>
    <inlineHelpText>Indicates the reason for the Outcome.</inlineHelpText>
    <label>Outcome Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aligns with Business Needs</fullName>
            </value>
            <value>
                <fullName>Aligns with Sales/Volume Goals</fullName>
            </value>
            <value>
                <fullName>Better Offering from Competitor</fullName>
            </value>
            <value>
                <fullName>Cost Efficient</fullName>
            </value>
            <value>
                <fullName>DD Operational Concerns</fullName>
            </value>
            <value>
                <fullName>Increased Visibility</fullName>
            </value>
            <value>
                <fullName>Lack of Integration</fullName>
            </value>
            <value>
                <fullName>Mx Operational Concerns</fullName>
            </value>
            <value>
                <fullName>Negative Previous Experience</fullName>
            </value>
            <value>
                <fullName>Not Bought into Value Prop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Price Concerns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>