sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Predicted_Sales_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Sales_Uplift__c</fullName>
    <inlineHelpText>Displays the Predicted Incremental Sales Uplift $ if the Mx implements this VSP Recommendations at all stores.</inlineHelpText>
    <label>Predicted Incremental Sales Uplift $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>