sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-623: Lookup on Campaign Product on Insight</description>
    <label>Solutions</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A Product Insight cannot be associated with an inactive Campaign Product. Please choose an active Campaign Product and try again.</errorMessage>
        <filterItems>
            <field>Campaign_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign_Product__c</referenceTo>
    <relationshipLabel>Product Insights</relationshipLabel>
    <relationshipName>Product_Insights</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>