sfdx-source/force-app/main/default/objects/Product_Insights__c/fields/Product_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Product_Outcome__c</fullName>
    <description>LEM-624: This field is concatenation of Product and Outcome fields.</description>
    <formula>Product__r.Name + &apos; - &apos; + TEXT(Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Outcome</label>
    <type>Text</type>
</CustomField>