sfdx-source/force-app/main/default/objects/Product_Insights__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Initiative__c</columns>
    <columns>Product__c</columns>
    <columns>Origin__c</columns>
    <columns>Actual_Incremental_Sales__c</columns>
    <columns>Interest_Level__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Insights</label>
</ListView>