sfdx-source/force-app/main/default/objects/Product_Insights__c/listViews/My_Product_Insights.listView-meta.xml
<ListView>
    <fullName>My_Product_Insights</fullName>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Initiative__c</columns>
    <columns>Product__c</columns>
    <columns>Origin__c</columns>
    <columns>Interest_Level__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Product Insights</label>
</ListView>